<resources>
    <string name="app_name">CHUROK</string>
    <string name="mebel">Лесорубка у Ашота</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="login_page">Вход</string>
    <string name="action_sign_in">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Почта</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="register_page">Регистрация</string>
    <string name="mebelsa">CHUROK</string>

    <string name="stols">Столы</string>
    <string name="krowats">Кровати</string>
    <string name="stuls">Стулья</string>

    <string name="action_register">Зарегистрироваться</string>
    <string name="home">Главная</string>
    <string name="log_out">Выйти</string>
</resources>