<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/buttonKrowats"
            android:text="@string/krowats"
            android:width="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/buttonStuls"
            android:text="@string/stuls"
            android:width="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/buttonStols"
            android:text="@string/stols"
            android:width="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            android:id="@+id/log_out"
            android:text="@string/log_out"
            android:width="150dp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>